--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,7 +140,7 @@ jobs:
  #          aws s3api put-object-tagging --bucket "$AWS_BUCKET" --key ${{needs.build-and-test.outputs.tool_dir}}/"$TIMESTAMP"_${{ env.TOOL_NAME }}.whl --tagging "{\"TagSet\": [{\"Key\": \"User\", \"Value\": \"${{ env.GH_USER}}\"},{\"Key\": \"Branch\", \"Value\": \"${{needs.build-and-test.outputs.source_branch}}\"},{\"Key\": \"CommitId\", \"Value\": \"${{env.COMMIT_ID}}\"}]}"
 
        - name: Publish to PyPI
-         if: startsWith(github.ref, 'refs/tags/v')
+ #        if: startsWith(github.ref, 'refs/tags/v')
          uses: pypa/gh-action-pypi-publish@release/v1
          with:
            skip_existing: true
