--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -242,7 +242,7 @@ jobs:
   
 
   publish-main:
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: [[ "${{ github.ref }}" == 'refs/heads/main' || "${{ startsWith(github.ref, 'refs/tags/v') }}" ]]
     needs: [build-and-test]
     runs-on: ubuntu-latest
 
