--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,7 @@ jobs:
           if [[ ${{ strategy.job-index }} == 0 ]]; then
             echo "MIN_PY_VER=${{ matrix.python-version }}" >> $GITHUB_OUTPUT
           fi
-          echo "GitHub Ref: ${{ github.ref }}"
-          echo "GitHub Ref_1: $GITHUB_REF"
+          echo "GitHub Ref: $GITHUB_REF"
           if [[ "$GITHUB_REF" == *"refs/tags/v"* || "$GITHUB_REF" == *"refs/tags/test-v"* ]]; then
             pkgVersion="$(echo ${{ github.ref }} | sed -r 's/^[\/a-zA-z-]+//')"
             if [[ $pkgVersion != *@(a|b)* ]]; then
@@ -65,6 +64,7 @@ jobs:
             fi
           else
             latestVer="$(git describe --tags $(git rev-list --tags --max-count=1) | sed -r 's/^[\/a-zA-z-]+//')"
+            echo "Last ver: $latestVer"
             if [[ $(echo "$latestVer" | cut -d. -f1,2) == $(date +"%y.%-m") ]] ; then
               nextVersion="$(date +"%y.%-m").$(( $(echo "$latestVer" | sed 's/.*\.//') + 1 ))"
             else
@@ -78,7 +78,7 @@ jobs:
               pkgVersion="${nextVersion}.dev0"
             fi
           fi
-          
+          echo "Package ver: $pkgVersion"
           echo "VERSION=$pkgVersion" >> $GITHUB_OUTPUT
           echo "RELEASE=$pkgRelease" >> $GITHUB_OUTPUT
           echo "APP_NAME=$APP_DIR" >> $GITHUB_OUTPUT
