--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,12 @@ jobs:
             fi
           else
             latestVer="$(git describe --tags $(git rev-list --tags --max-count=1) | sed -r 's/^[\/a-zA-z-]+//')"
+            latest_tag=$(git describe --tags --match "test-v*" --abbrev=0)
             echo "Last ver: $latestVer"
+            echo "Last tag: $latest_tag"
+            if [[ $latest_tag =~ ^test-([0-9]+\.[0-9]+\.[0-9]+) ]]; then
+               echo "Extracted Version: ${BASH_REMATCH[1]}"
+            fi
             if [[ $(echo "$latestVer" | cut -d. -f1,2) == $(date +"%y.%-m") ]] ; then
               nextVersion="$(date +"%y.%-m").$(( $(echo "$latestVer" | sed 's/.*\.//') + 1 ))"
             else
