--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,9 @@ jobs:
             fi
           else
             latestVer="$(git describe --tags $(git rev-list --tags --max-count=1) | sed -r 's/^[\/a-zA-z-]+//')"
-            latest_tag=$(git describe --tags --match "test-v*" --abbrev=0)
+            matching_tags=($(git tag -l 'test-*' | sort -V))
+            # Get the latest matching tag
+            latest_tag="${matching_tags[-1]}"
             echo "Last ver: $latestVer"
             echo "Last tag: $latest_tag"
             if [[ $latest_tag =~ ^test-([0-9]+\.[0-9]+\.[0-9]+) ]]; then
