--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,14 @@ jobs:
             latestVer="$(git describe --tags $(git rev-list --tags --max-count=1) | sed -r 's/^[\/a-zA-z-]+//')"
             matching_tags=($(git tag -l 'test-*' | sort -V))
             # Get the latest matching tag
-            latest_tag="${matching_tags[-1]}"
+            latest_tag=""
+            # Loop through the matching tags to find the latest one
+            for tag in "${matching_tags[@]}"; do
+              if [[ "$tag" > "$latest_tag" ]]; then
+                latest_tag="$tag"
+              fi
+            done
+
             echo "Last ver: $latestVer"
             echo "Last tag: $latest_tag"
             if [[ $latest_tag =~ ^test-([0-9]+\.[0-9]+\.[0-9]+) ]]; then
