--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
             fi
           else
             latestVer="$(git describe --tags $(git rev-list --tags --max-count=1) | sed -r 's/^[\/a-zA-z-]+//')"
-            matching_tags=($(git tag -l 'test-*' | sort -V))
+            matching_tags=($(git tag -l 'test-v*' | sort -V))
             # Get the latest matching tag
             latest_tag=""
             # Loop through the matching tags to find the latest one
@@ -76,7 +76,7 @@ jobs:
 
             echo "Last ver: $latestVer"
             echo "Last tag: $latest_tag"
-            if [[ $latest_tag =~ ^test-([0-9]+\.[0-9]+\.[0-9]+) ]]; then
+            if [[ $latest_tag =~ ^test-v([0-9]+\.[0-9]+\.[0-9]+) ]]; then
                echo "Extracted Version: ${BASH_REMATCH[1]}"
             fi
             if [[ $(echo "$latestVer" | cut -d. -f1,2) == $(date +"%y.%-m") ]] ; then
