--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
           else
             latestVer="$(git describe --tags $(git rev-list --tags --max-count=1) | sed -r 's/^[\/a-zA-z-]+//')"
             matching_tags=($(git tag -l 'test-v*' | sort -V))
+            echo "Matching tags: $matching_tags"
             # Get the latest matching tag
             latest_tag=""
             # Loop through the matching tags to find the latest one
