--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,22 +64,14 @@ jobs:
             fi
           else
             latestVer="$(git describe --tags $(git rev-list --tags --max-count=1) | sed -r 's/^[\/a-zA-z-]+//')"
-            matching_tags=()
-            # List tags that match the pattern
-            git tag -l 'test-v*' | while read -r tag; do
-            matching_tags+=("$tag")
-            done
-            # Sort matching tags in version order
-            IFS=$'\n' sorted_tags=($(sort -V <<<"${matching_tags[*]}"))
-            unset IFS
-
-            # Get the latest matching tag
-            latest_tag="${sorted_tags[-1]}"
+            
+            latest_tag=$(git for-each-ref --sort=-taggerdate --format '%(refname:short)' 'refs/tags/test-v*' | head -n 1)
+            # Extract the version number using jq
+            extracted_version=$(echo "$latest_tag" | jq -r 'capture("test-v(?<version>[0-9]+\\.[0-9]+\\.[0-9]+)") | .version')
             echo "Last ver: $latestVer"
             echo "Last tag: $latest_tag"
-            if [[ $latest_tag =~ ^test-v([0-9]+\.[0-9]+\.[0-9]+) ]]; then
-               echo "Extracted Version: ${BASH_REMATCH[1]}"
-            fi
+            echo "Last extracted: $extracted_version"
+            
             if [[ $(echo "$latestVer" | cut -d. -f1,2) == $(date +"%y.%-m") ]] ; then
               nextVersion="$(date +"%y.%-m").$(( $(echo "$latestVer" | sed 's/.*\.//') + 1 ))"
             else
