--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: List Tags
-        run: git tag -l
+        run: |
+          git fetch --tags
+          git tag -l
       - name: Set Environment Variables
         id: set_env_vars
         env:
